Fix AppearanceValueAffectsFrames.
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
People
(Reporter: emilio, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-release+
RyanVM
:
approval-mozilla-esr102+
|
Details | Review |
| Assignee | ||
Comment 1•4 years ago
|
||
We had zero tests for this, and when I implemented the optimization to
avoid reframing in most cases I apparently swapped the arguments ;_;
Fix <input type=search> which suffered from the same issue, but we don't
ship by default.
Comment 4•3 years ago
|
||
The severity field is not set for this bug.
:TYLin, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•3 years ago
|
Comment 6•3 years ago
|
||
| bugherder | ||
Comment 7•3 years ago
|
||
Given this was a regression which shipped and caused some compat issues, did we consider an uplift?
| Assignee | ||
Comment 8•3 years ago
|
||
I think this landed during the soft-freeze, but I guess the patch is trivial so if we're doing a dot-release, might as well.
| Assignee | ||
Comment 9•3 years ago
|
||
Comment on attachment 9291148 [details]
Bug 1786521 - Fix AppearanceValueAffectsFrames. r=jfkthame,#layout
Beta/Release Uplift Approval Request
- User impact if declined: See dupes
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Relatively simple fixup to dynamic appearance changes.
- String changes made/needed: none
- Is Android affected?: Yes
Updated•3 years ago
|
Comment 10•3 years ago
|
||
Set release status flags based on info from the regressing bug 1768155
Comment 11•3 years ago
|
||
Comment on attachment 9291148 [details]
Bug 1786521 - Fix AppearanceValueAffectsFrames. r=jfkthame,#layout
Simple fix with a lot of new tests and a few dupe bugs filed now. Approved for 105.0.2 and 102.4esr.
Comment 12•3 years ago
|
||
| bugherder uplift | ||
Comment 13•3 years ago
|
||
| bugherder uplift | ||
Comment 14•3 years ago
|
||
Added to the 105.0.2 release notes:
Fixed a bug causing some dynamic appearance changes to appear when expected
Comment 15•3 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #14)
Added to the 105.0.2 release notes:
Fixed a bug causing some dynamic appearance changes to appear when expected
Hi, should that read “to not appear when expected”, please?
(As written, it made me wonder how it could be a bug if it caused things to appear when expected.)
Comment 16•3 years ago
|
||
Good catch! I've updated the note and it should be live in the next 15-20min.
Description
•