Bug 1786521 - Fix AppearanceValueAffectsFrames. r=TYLin, a=RyanVM

We had zero tests for this, and when I implemented the optimization to
avoid reframing in most cases I apparently swapped the arguments ;_;

Fix <input type=search> which suffered from the same issue, but we don't
ship by default.

Differential Revision: https://phabricator.services.mozilla.com/D155394