layout/style/nsStyleStruct.cpp
@@ -2358,16 +2358,16 @@ static bool ScrollbarGenerationChanged(const nsStyleDisplay& aOld,
          changed(aOld.mOverflowY, aNew.mOverflowY);
 }
 
-static bool AppearanceValueAffectsFrames(StyleAppearance aDefaultAppearance,
-                                         StyleAppearance aAppearance) {
+static bool AppearanceValueAffectsFrames(StyleAppearance aAppearance,
+                                         StyleAppearance aDefaultAppearance) {
   switch (aAppearance) {
     case StyleAppearance::Textfield:
-      // This is for <input type=number> where we allow authors to specify a
-      // |-moz-appearance:textfield| to get a control without a spinner. (The
-      // spinner is present for |-moz-appearance:number-input| but also other
-      // values such as 'none'.) We need to reframe since this affects the
-      // spinbox creation in nsNumberControlFrame::CreateAnonymousContent.
-      return aDefaultAppearance == StyleAppearance::NumberInput;
+      // This is for <input type=number/search> where we allow authors to
+      // specify a |-moz-appearance:textfield| to get a control without buttons.
+      // We need to reframe since this affects the spinbox creation in
+      // nsNumber/SearchControlFrame::CreateAnonymousContent.
+      return aDefaultAppearance == StyleAppearance::NumberInput ||
+             aDefaultAppearance == StyleAppearance::Searchfield;
     case StyleAppearance::Menulist:
       // This affects the menulist button creation.
       return aDefaultAppearance == StyleAppearance::Menulist;
